force-app/main/default/objects/Brackets_Match__c/Brackets_Match__c.object-meta.xml
<CustomObject>
    <label>Match</label>
    <nameField>
        <displayFormat>MA-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>