force-app/main/default/objects/Brackets_Match__c/fields/Brackets_Round__c.field-meta.xml
<CustomField>
    <fullName>Brackets_Round__c</fullName>
    <label>Round</label>
    <referenceTo>Brackets_Round__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>