force-app/main/default/objects/Brackets_Match__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <inlineHelpText
    >If rounds are grouped in conferences, this is the conference the match is part of.</inlineHelpText>
    <label>Conference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>