force-app/main/default/objects/Brackets_Match__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Short description of the match</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>