force-app/main/default/objects/Brackets_Match__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>