force-app/main/default/objects/Brackets_Match__c/fields/FollowingBrackets_Match__c.field-meta.xml
<CustomField>
    <fullName>FollowingBrackets_Match__c</fullName>
    <label>FollowingMatch</label>
    <referenceTo>Brackets_Match__c</referenceTo>
    <relationshipLabel>PreviousMatches</relationshipLabel>
    <relationshipName>PreviousMatches</relationshipName>
    <type>Lookup</type>
</CustomField>