force-app/main/default/objects/Brackets_Match__c/fields/FollowingIsHome__c.field-meta.xml
<CustomField>
    <fullName>FollowingIsHome__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FollowingIsHome</label>
    <type>Checkbox</type>
</CustomField>