force-app/main/default/objects/Brackets_Match__c/fields/HomeBrackets_Team__c.field-meta.xml
<CustomField>
    <fullName>HomeBrackets_Team__c</fullName>
    <label>Team 1</label>
    <referenceTo>Brackets_Team__c</referenceTo>
    <relationshipLabel>HomeMatches</relationshipLabel>
    <relationshipName>HomeMatch</relationshipName>
    <type>Lookup</type>
</CustomField>