force-app/main/default/objects/Brackets_Match__c/fields/HomePrediction__c.field-meta.xml
<CustomField>
    <fullName>HomePrediction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HomePrediction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>