force-app/main/default/objects/Brackets_Match__c/fields/HomeScore__c.field-meta.xml
<CustomField>
    <fullName>HomeScore__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Score of Team 1 after the match end.</inlineHelpText>
    <label>Team 1 Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>