force-app/main/default/objects/Brackets_Match__c/fields/isLocked__c.field-meta.xml
<CustomField>
    <fullName>isLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLocked</label>
    <type>Checkbox</type>
</CustomField>