force-app/main/default/objects/Brackets_Match__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <defaultValue>1</defaultValue>
    <description
    >Keep the position respect to its round, each position should be unique.</description>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>