force-app/main/default/objects/Brackets_Match__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <inlineHelpText>Date of the match</inlineHelpText>
    <label>Schedule</label>
    <type>DateTime</type>
</CustomField>