force-app/main/default/objects/Brackets_Match__c/fields/VisitorBrackets_Team__c.field-meta.xml
<CustomField>
    <fullName>VisitorBrackets_Team__c</fullName>
    <label>Team 2</label>
    <referenceTo>Brackets_Team__c</referenceTo>
    <relationshipLabel>VisitorMatches</relationshipLabel>
    <relationshipName>VisitorMatches</relationshipName>
    <type>Lookup</type>
</CustomField>