force-app/main/default/objects/Brackets_Match__c/fields/VisitorPrediction__c.field-meta.xml
<CustomField>
    <fullName>VisitorPrediction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VisitorPrediction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>