force-app/main/default/objects/Brackets_Match__c/fields/VisitorScore__c.field-meta.xml
<CustomField>
    <fullName>VisitorScore__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Score of Team 2 after the match end.</inlineHelpText>
    <label>Team 2 Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>