force-app/main/default/objects/Brackets_Match__c/fields/WinnerBrackets_Team__c.field-meta.xml
<CustomField>
    <fullName>WinnerBrackets_Team__c</fullName>
    <inlineHelpText>Match winner (Team 1 or Team 2)</inlineHelpText>
    <label>Winner Team</label>
    <referenceTo>Brackets_Team__c</referenceTo>
    <relationshipLabel>WinnerMatches</relationshipLabel>
    <relationshipName>WinnerMatches</relationshipName>
    <type>Lookup</type>
</CustomField>