force-app/main/default/objects/Brackets_Match__c/validationRules/Conference_read_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Conference_read_only</fullName>
    <active>false</active>
    <errorConditionFormula
    >NOT(ISNEW()) &amp;&amp; ISCHANGED( Conference__c  )</errorConditionFormula>
    <errorDisplayField>Conference__c</errorDisplayField>
    <errorMessage>This field is not updatable.</errorMessage>
</ValidationRule>