force-app/main/default/objects/Brackets_Match__c/validationRules/DifferentTeams.validationRule-meta.xml
<ValidationRule>
    <fullName>DifferentTeams</fullName>
    <active>true</active>
    <description
    >The home and visitor teams must be different teams</description>
    <errorConditionFormula
    >AND(AND(NOT( ISBLANK( VisitorBrackets_Team__c ) ),NOT( ISBLANK( HomeBrackets_Team__c ) )),HomeBrackets_Team__c = VisitorBrackets_Team__c)</errorConditionFormula>
    <errorMessage>Team 1 and Team 2 must be different</errorMessage>
</ValidationRule>