force-app/main/default/objects/Brackets_Match__c/validationRules/PositiveScores.validationRule-meta.xml
<ValidationRule>
    <fullName>PositiveScores</fullName>
    <active>true</active>
    <description>Scores must be a positive numbers</description>
    <errorConditionFormula
    >HomeScore__c &lt; 0 ||  VisitorScore__c &lt; 0</errorConditionFormula>
    <errorMessage>The score must be a positive number</errorMessage>
</ValidationRule>