force-app/main/default/objects/Brackets_Match__c/validationRules/ScheduleAfterDeadlineRound.validationRule-meta.xml
<ValidationRule>
    <fullName>ScheduleAfterDeadlineRound</fullName>
    <active>true</active>
    <errorConditionFormula>And ( 
!isBlank(Schedule__c),
!isBlank(Brackets_Round__r.Deadline__c),
Schedule__c &lt; Brackets_Round__r.Deadline__c
)</errorConditionFormula>
    <errorDisplayField>Schedule__c</errorDisplayField>
    <errorMessage
    >This date must be greater than the round&apos;s deadline.</errorMessage>
</ValidationRule>