force-app/main/default/objects/Brackets_Match__c/validationRules/Scores_can_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Scores_can_not_be_null</fullName>
    <active>true</active>
    <description
    >If the Winner Team is establish, the scores can not be null or empty</description>
    <errorConditionFormula>!ISNULL( WinnerBrackets_Team__c ) &amp;&amp; 
(  !ISNUMBER( TEXT(VisitorScore__c) )  ||  !ISNUMBER( TEXT(HomeScore__c))  )</errorConditionFormula>
    <errorDisplayField>WinnerBrackets_Team__c</errorDisplayField>
    <errorMessage>Scores can not be null</errorMessage>
</ValidationRule>