force-app/main/default/objects/Brackets_Match__c/validationRules/WinnerTeamGreaterScoreThanOpponent.validationRule-meta.xml
<ValidationRule>
    <fullName>WinnerTeamGreaterScoreThanOpponent</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( WinnerBrackets_Team__c),false,
      OR( 
             AND( 
                   WinnerBrackets_Team__c ==  HomeBrackets_Team__c,HomeScore__c &lt;=  VisitorScore__c
              ),
             AND( 
              WinnerBrackets_Team__c ==  VisitorBrackets_Team__c,HomeScore__c &gt;= VisitorScore__c )
      )
)</errorConditionFormula>
    <errorDisplayField>WinnerBrackets_Team__c</errorDisplayField>
    <errorMessage
    >A Winner must have an score greater than its opponent.</errorMessage>
</ValidationRule>