force-app/main/default/objects/Brackets_Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>HomeBrackets_Team__c</columns>
    <columns>HomeScore__c</columns>
    <columns>VisitorBrackets_Team__c</columns>
    <columns>VisitorScore__c</columns>
    <columns>VisitorPrediction__c</columns>
    <columns>isLocked__c</columns>
    <columns>Position__c</columns>
    <columns>FollowingBrackets_Match__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>